--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Compose Perkuliahan Kelompok 5</string>
     <string name="home">Home</string>
-    <string name="pengelolaan_dosen">Pengelolaan Dosen</string>
-    <string name="pengelolaan_mahasiswa">Pengelolaan Mahasiswa</string>
-    <string name="pengelolaan_matakuliah">Pengelolaan Matakuliah</string>
+    <string name="pengelolaan_dosen">Dosen</string>
+    <string name="pengelolaan_mahasiswa">Mahasiswa</string>
+    <string name="pengelolaan_matakuliah">Matakuliah</string>
     <string name="about">About</string>
 </resources>
